// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button 컴포넌트 스냅샷 기본 Button 컴포넌트 스냅샷 1`] = `
<div>
  <button
    class="bg-blue-500  "
  >
    클릭하세요
  </button>
</div>
`;

exports[`Button 컴포넌트 스냅샷 로딩 상태 1`] = `
<div>
  <button
    class="bg-blue-500  animate-pulse"
  >
    클릭하세요
  </button>
</div>
`;

exports[`Button 컴포넌트 스냅샷 비활성화 상태 1`] = `
<div>
  <button
    class="bg-blue-500 cursor-not-allowed opacity-50 "
  >
    클릭하세요
  </button>
</div>
`;
